namespace TaskManager.database;

public class SQLiteDatabaseManager
{
    
}