namespace TaskManager.interfaces;

public interface IDataManagement
{
    
}