namespace TaskManager.utilities;

public static class DateTimeUtility
{
    public static DateTime GetCurrentDateTime()
    {
        return DateTime.Now; // Returns the current date and time
    }
}